# vscode-kdb

./: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  PARITY.md  PARITY_RUN.json  PARITY_RUN.md  README.md  THIRD_PARTY_NOTICES.md  language-configuration.json  mkdocs.yml  package-lock.json  package.json  tsconfig.json
docs/: 404.html  index.html
mkdocs-src/: README.md  charting.md  connections.md  copy-export.md  feedback.md  index.md  installation.md  local-data-server.md  notebooks.md  parity-roadmap.md  performance.md  results-viewer.md  running-q.md  settings.md  troubleshooting.md
python/kx_notebook/: README.md  pyproject.toml
python/kx_notebook/src/kx_notebook/: __init__.py  contract.py  display.py  fallback.py  magic.py  pykx.py  testing.py
python/kx_notebook/tests/: test_contract.py  test_magic.py
renderer/: index.ts  tsconfig.json
scripts/: audit-release.py  check-notebook-contract.js  run-cross-parity.js  run-extension-host-test.js
src/: chart-series-state.ts  chart-zoom.ts  charting.ts  connection-commands.ts  connection-form-model.ts  connection-form-panel.ts  connection-lifecycle.ts  connection-manager.ts  connection-migration.ts  connection-store.ts  connection-test.ts  connection-tree.ts  connection.ts  diagnostics.ts  extension.ts  feature-controls.ts  kx-results-panel.ts  kx-results.ts  local-data-server.ts  notebook-cell-language.ts  notebook-cell-preparation.ts  notebook-contract.ts  notebook-controller.ts  notebook-integration.ts  notebook-live-results.ts  notebook-message.ts  notebook-q-target.ts  notebook-renderer-model.ts  perf.ts  (+7 more)
(+31 files in other folders)
