[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kx-notebook"
version = "0.2.6"
description = "Portable KX/q result MIME output for ordinary IPython and Jupyter notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "vscode-kdb contributors" },
]
dependencies = [
  "ipython>=8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
